# eiimage

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPILE.md  DPCM_20niv_-255_255.loi  README  README.md  TODOLIST.md  infos_complementaires.md
app/: CMakeLists.txt  Tools.h  eiimage_app_res.qrc  eiimage_en.ts  eiimage_fr.ts  imageinsa_app_res.qrc  imageinsa_en.qm  imageinsa_en.ts  imageinsa_fr.qm  imageinsa_fr.ts  insaimage_en.ts  insaimage_fr.ts  main.cpp
app/Algorithms/: ClassAnalysis.cpp  ClassAnalysis.h  Croissance.cpp  Croissance.h  DCT.cpp  DCT.h  FFT.cpp  FFT.h  Pyramid.cpp  Pyramid.h
app/Operations/: AbsoluteConvertOp.cpp  AbsoluteConvertOp.h  BFlitOp.cpp  BFlitOp.h  BinaryMaskOp.cpp  BinaryMaskOp.h  CenterOp.cpp  CenterOp.h  ClassAnalysisDialog.cpp  ClassAnalysisDialog.h  ClassAnalysisDialog.ui  ClassAnalysisOp.cpp  ClassAnalysisOp.h  ClassResultOp.cpp  ClassResultOp.h  ColorDialog.cpp  ColorDialog.h  ColorDialog.ui  ColorimetryOp.cpp  ColorimetryOp.h  CombineColorOp.cpp  CombineColorOp.h  CombineHsvOp.cpp  CombineHsvOp.h  CroissanceOp.cpp  CroissanceOp.h  DCTDialog.cpp  DCTDialog.h  DCTDialog.ui  DCTOp.cpp  DCTOp.h  DMMDialog.cpp  DMMDialog.h  DMMOp.cpp  DMMOp.h  DPCM.cpp  DPCM.h  DPCMDialog.cpp  DPCMDialog.h  DPCMDialog.ui  (+122 more)
app/RandomLib/: CMakeLists.txt  Config.h  Config.h.in  Config.h.template  ExactExponential.hpp  ExactNormal.hpp  ExactPower.hpp  ExponentialDistribution.hpp  ExponentialProb.hpp  InverseEProb.hpp  InversePiProb.hpp  LeadingZeros.hpp  MPFRExponential.hpp  MPFRExponentialL.hpp  MPFRNormal.hpp  MPFRNormalK.hpp  MPFRNormalR.hpp  MPFRRandom.hpp  MPFRUniform.hpp  NormalDistribution.hpp  Random.hpp  RandomCanonical.hpp  RandomEngine.hpp  RandomMixer.hpp  RandomNumber.hpp  RandomSelect.hpp  RandomType.hpp  cmake_install.cmake
app/Services/: EIImageService.cpp  EIImageService.h  FilteringService.cpp  FilteringService.h  INSAimageService.cpp  INSAimageService.h  ImageINSAService.cpp  ImageINSAService.h  MorphoMatService.cpp  MorphoMatService.h  OpSetService.cpp  OpSetService.h  OperationService.cpp  OperationService.h  PluginManager.cpp  PluginManager.h  PluginService.cpp  PluginService.h
app/Widgets/: FilterChoice.cpp  FilterChoice.h  FilterEditor.cpp  FilterEditor.h  FilterEditorItem.cpp  FilterEditorItem.h  ImageZoneSelector.cpp  ImageZoneSelector.h  OperationBar.cpp  OperationBar.h  Preview.cpp  Preview.h  StructElemViewer.cpp  StructElemViewer.h  StructElemWindow.cpp  StructElemWindow.h
cmake/modules/: FindQwt.cmake
core/: BuiltinOpSet.cpp  BuiltinOpSet.h  CMakeLists.txt  Doxyfile  ImgOutput.cpp  ImgOutput.h  ImgParam.cpp  ImgParam.h  ImgWidget.h  Input.h  IntParam.cpp  IntParam.h  OpSet.h  Operation.cpp  Operation.h  Output.h  Parameter.h  PlugOperation.cpp  PlugOperation.h  Plugin.cpp  Plugin.h
doc/: Guide_Compilation_machine_virtuelle_V2.docx  Memo_Preparation_sources_pour_TP.docx  README-Log-evolution-logiciel-TP-Images.txt  UpdateImageINSA-2018-02-16.xlsx
lang/: genericinterface_en.qm  genericinterface_fr.qm  imageinsa_en.qm  imageinsa_fr.qm
plugins/: CMakeLists.txt  README.txt  plugin.cpp
plugins/Entropy/: Entropy.cpp  EntropyCorrection.cpp
plugins/Median/: Median.cpp
plugins/Segmentation/: segmentation.cpp
plugins/SegmentationTest/: segmentation.cpp
test/: README.md  README.txt  test  testgui.cpp  testgui.moc
test/Matlab/: CombineRGB.m  Filter.m  Fourier.m  GaussianPyramid.m  HistogramEqualize.m  Huffman.m  InverseFourier.m  MorphMath.m  QuantizationLinearCentered.m  QuantizationLloydMax.m  QuantizationNonLinearCentered.m  QuantizationNonLinearMeanValue.m  Scaling.m  SplitHSV.m  dctInverseTransform.m  dctTransform.m  generate_haar.m  haarInverseTransform.m  haarTransform.m  hadamardInverseTransform.m  hadamardTransform.m  hough2.m  thresholding.m  vff.m
test/res/: test_thresholding_imao5_127.vff  test_thresholding_imao5_30_200.vff  test_thresholding_result_imao5_otsu.vff
test/src/: test_EqualizeHistogram_imao1.vff  test_combineRGB_clown_B.vff  test_combineRGB_clown_R.vff  test_combineRGB_clown_V.vff  test_fourier_test1.vff  test_fourier_test2.vff  test_fourier_test3.vff  test_fourier_test5.vff  test_morph_imao6.vff
